--- a/backend/.env
+++ b/backend/.env
@@ -6,15 +6,15 @@ ENVIRONMENT=development
 
 # API Settings
 API_V1_PREFIX="/api/v1"
-CORS_ORIGINS="http://localhost:3000,http://localhost:5173"
+CORS_ORIGINS=["http://localhost:3000","http://localhost:5173"]
 
 # Database (PostgreSQL)
-DATABASE_URL="postgresql+asyncpg://postgres:postgres@localhost:5432/agent_optimizer"
+DATABASE_URL="postgresql+asyncpg://postgres:123@localhost:5432/agent_optimizer"
 DATABASE_POOL_SIZE=5
 DATABASE_MAX_OVERFLOW=10
 
 # Portkey Integration
-PORTKEY_API_KEY="2HaSBLHIhfvakyu4FQ2tLBzsUWXj "
+PORTKEY_API_KEY="2HaSBLHIhfvakyu4FQ2tLBzsUWXj"
 PORTKEY_BASE_URL="https://api.portkey.ai"
 
 # Evaluation Settings
